jdk 8 downgraded